--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  rxdart: ^0.21.0
+  http: ^0.12.0+1
+  shared_preferences: ^0.5.1+2
+  bloc: ^0.12.0
+  flutter_bloc: ^0.11.0
+  meta: ^1.1.6
+  equatable: ^0.2.3
+  path: ^1.6.2
 
 dev_dependencies:
   flutter_test:
